--- a/myst.yml
+++ b/myst.yml
@@ -24,6 +24,7 @@ project:
       affiliations:
         - Curvenote
   github: https://github.com/stevejpurves/ign-earthquake-data
+  binder: https://mybinder.org/v2/gh/curvenote/nn-submission-myst-lite/HEAD?labpath=la-palma-visualization.ipynb
   open_access: true
   license:
     content: CC-BY-SA-4.0
