✍️ Add more tutorial content to notebook

--- a/myst.yml
+++ b/myst.yml
@@ -1,10 +1,9 @@
 # See docs at: https://myst-tools.org/docs/mystjs/frontmatter
 version: 1
 project:
-  title: La Palma Earthquakes
-  description: >-
-    Analysis of seismic event data during the 2021 eruption of the Cumbra Vieja
-    volcano on the island of La Palma in the Canary Islands.
+  title: |-
+    Title will be pulled directly from the first header of the article
+    or you can specify title in the page frontmatter of the article
   authors:
     - name: Steve Purves
       orcid: 0000-0002-0760-5497
@@ -29,15 +28,21 @@ project:
   license:
     content: CC-BY-SA-4.0
     code: MIT
-  subject: Geoscience
+  keywords:
+    - La Palma
+    - Earthquakes
+  date: 2022-05-11
   exports:
-    - format: pdf
-      article: la-palma-visualization.ipynb
-      template: agu2019
-      keypoint_1: IGN data allows earthquake depth visualization at La Palma
-      keypoint_2: Analysis of this data supports the presence of two magma reservoirs
-      journal_name: Tectonics
-      output: la-palma-visualization.pdf
     - format: jats
-      article: la-palma-visualization.ipynb
+      article: article.ipynb
       output: la-palma-visualization.xml
+    - format: pdf
+      article: article.ipynb
+      output: la-palma-visualization.pdf
+      template: agu2019
+      # The following are template-specific options
+      keypoint_1: You may specify 1 to 3 keypoints for this PDF template
+      keypoint_2: These keypoints are complete sentences and less than or equal to 140 characters
+      keypoint_3: They are specific to this PDF template, so they will not appear in other exports
+      journal_name: Notebooks Now!
+      draft: false
